update saving log class